tests/fixtures/invalid/list_bitxor_none.py
# Cannot bitwise XOR List[int] and None
x: list[int] = [1, 2, 3] ^ None
